a11y-hidden 클래스 추가

--- a/thinkwithgoogle.html
+++ b/thinkwithgoogle.html
@@ -34,7 +34,7 @@
 			</a>
 		</h1>
 		<nav id="global-navigation">
-			<h2 hidden>글로벌 네비게이션</h2>
+			<h2 class="a11y-hidden">글로벌 네비게이션</h2>
 			<ul>
 				<li><a href="#">Success Stories</a></li>
 				<li><a href="#">Research</a></li>
