--- a/thinkwithgoogle.html
+++ b/thinkwithgoogle.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="think-with-Google main page">
 	<meta name="robots" content="all">
 	<link rel="stylesheet" href="css/thinkwithgoogle.css">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/jquery.bxslider.js" type="text/javascript"></script>
 	<script type="text/javascript">
     $(document).ready( function(){
@@ -28,6 +28,7 @@
 
 <body>
 <div class="wrap">
+	
 	<!-- header -->
 	<header>
 		<h1>
